--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@ body{
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;/*aligns center horizontally*/
-    align-items: center;  /*aligns center vertically*/
+    justify-content: center;
+    align-items: center;  
     background-color: rgb(52, 51, 51);
 }
 .container{
